Add docker, and docker compose file, upload to heroku so access will be easy

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mooseetws-backend",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "debug": "DEBUG=mooseetws-backend:* npm start"
+    "start": "node ./bin/www",
+    "debug": "DEBUG=mooseetws-backend:* nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
