--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "debug": "DEBUG=mooseetws-backend:* nodemon ./bin/www"
+    "debug": "DEBUG=mooseetws-backend:* node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -12,6 +12,7 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "lowdb": "^1.0.0",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
