--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "lowdb": "^1.0.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
